Reviewed by Eric Seidel.

Make sure we properly set the button for all mouse events, not just mouse down, set the click count to 0 for non-click events, and finally set the timestamp.
        
https://bugs.webkit.org/show_bug.cgi?id=18464


git-svn-id: svn://svn.chromium.org/blink/trunk@32798 bbb929c8-8fbe-4397-9dbb-9b2b20218538